--- a/Mija Reader/App.xaml
+++ b/Mija Reader/App.xaml
@@ -1,6 +1,7 @@
 ﻿<Application x:Class="Mija_Reader.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:addControls="clr-namespace:Mija_Reader.AdditionalControls"
              xmlns:local="clr-namespace:Mija_Reader"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
