--- a/Mija Reader/MainWindow.xaml
+++ b/Mija Reader/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Mija_Reader.MainWindow"
+﻿<Window xmlns:AdditionalControls="clr-namespace:Mija_Reader.AdditionalControls"  x:Class="Mija_Reader.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -34,7 +34,7 @@
                             </Grid.RowDefinitions>
 
                             <StackPanel Grid.Row="0">
-                                <ComboBox x:Name="c_SearchCB" MaxHeight="20" ItemsSource="{Binding SearchPluginData}" IsEnabled="False">
+                                <ComboBox x:Name="c_SearchCB" MaxHeight="20" ItemsSource="{Binding SearchPluginData}" IsEnabled="False" SelectionChanged="c_SearchCB_SelectionChanged">
                                     <ComboBox.ItemTemplate>
                                         <DataTemplate>
                                             <Grid>
@@ -51,12 +51,35 @@
                                         </DataTemplate>
                                     </ComboBox.ItemTemplate>
                                 </ComboBox>
-                                <TextBox MaxHeight="25"></TextBox>
+                                <AdditionalControls:SearchTextBox x:Name="tvSearchText" Watermark="searching quote" KeyUp="SearchTextBox_KeyUp"/>
                             </StackPanel>
-                            <ListView Grid.Row="1" VerticalAlignment="Stretch"></ListView>
+                            <ListView Grid.Row="1" VerticalAlignment="Stretch" ItemsSource="{Binding SearchResultsData}">
+                                <ListView.ItemTemplate>
+                                    <DataTemplate>
+                                        <Grid ToolTip="{Binding Name}" Width="100">
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="100"/>
+                                            </Grid.ColumnDefinitions>
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="Auto" />
+                                            </Grid.RowDefinitions>
+                                            <!-- fill grid background-->
+                                            <Image Grid.Row="0" Grid.Column="0" Width="100" Source="{Binding Image}"/>
+                                        </Grid>
+                                    </DataTemplate>
+                                </ListView.ItemTemplate>
+                                <ListView.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <WrapPanel Width="{Binding (FrameworkElement.ActualWidth), RelativeSource={RelativeSource AncestorType={x:Type ScrollContentPresenter}}}"
+											ItemWidth="{Binding (ListView.View).ItemWidth, RelativeSource={RelativeSource AncestorType={x:Type ListView}}}"
+											MinWidth="{Binding ItemWidth, RelativeSource={RelativeSource Self}}"
+											ItemHeight="{Binding (ListView.View).ItemHeight, RelativeSource={RelativeSource AncestorType={x:Type ListView}}}" />
+                                    </ItemsPanelTemplate>
+                                </ListView.ItemsPanel>
+                            </ListView>
                             <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Bottom">
-                                <Button Content="&lt;&lt;"></Button>
-                                <Button Content="&gt;&gt;"></Button>
+                                <Button x:Name="tvSearchPrev" Content="&lt;&lt;" IsEnabled="True" Click="tvSearchPrev_Click"></Button>
+                                <Button x:Name="tvSearchNext" Content="&gt;&gt;" IsEnabled="False" Click="tvSearchNext_Click"></Button>
                             </StackPanel>
                         </Grid>
                     </GroupBox>
