--- a/Mija Reader/App.xaml
+++ b/Mija Reader/App.xaml
@@ -1,10 +1,11 @@
 ﻿<Application x:Class="Mija_Reader.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:addControls="clr-namespace:Mija_Reader.AdditionalControls"
-             xmlns:local="clr-namespace:Mija_Reader"
+             xmlns:core="clr-namespace:Mija_Reader.Core"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
+        <core:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
+        <core:ToLowerValueConverter x:Key="ToLowerValueConverter"/>
         <!--  Button style -->
         <Style TargetType="{x:Type Button}" x:Key="WindowButtonStyle">
             <Setter Property="Template">
@@ -46,5 +47,40 @@
                 </Trigger>
             </Style.Triggers>
         </Style>
+
+        <Style TargetType="{x:Type Label}" x:Key="HeaderLabelStyle">
+            <Setter Property="FontSize" Value="24" />
+            <Setter Property="FontWeight" Value="Normal" />
+            <Setter Property="TextOptions.TextFormattingMode" Value="Ideal" />
+            <Setter Property="Foreground" Value="{DynamicResource GrayBrush3}" />
+        </Style>
+
+        <Style x:Key="ModalDialogStyle" TargetType="{x:Type Window}">
+            <Setter Property="WindowStyle" Value="None" />
+            <Setter Property="ResizeMode" Value="NoResize" />
+            <Setter Property="IsTabStop" Value="False" />
+            <Setter Property="ShowInTaskbar" Value="False" />
+            <Setter Property="Foreground">
+                <Setter.Value>
+                    <SolidColorBrush Color="{DynamicResource BlackColor}"/>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="Background">
+                <Setter.Value>
+                    <SolidColorBrush Color="{DynamicResource WhiteColor}"/>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="Template" Value="{DynamicResource ModalTemplateKey}" />
+        </Style>
+
+        <ControlTemplate x:Key="ModalTemplateKey" TargetType="{x:Type Window}">
+            <Border x:Name="PART_Border" BorderBrush="{DynamicResource GrayBrush3}" BorderThickness="0,3,0,3" Background="{TemplateBinding Background}">
+                <Grid>
+                    <AdornerDecorator>
+                        <ContentPresenter />
+                    </AdornerDecorator>
+                </Grid>
+            </Border>
+        </ControlTemplate>
     </Application.Resources>
 </Application>
